--- a/server/mosquitto/TLS_mosquitto.conf
+++ b/server/mosquitto/TLS_mosquitto.conf
@@ -14,5 +14,5 @@ cafile /etc/mosquitto/certs/ca.crt
 certfile /etc/mosquitto/certs/server.crt
 keyfile /etc/mosquitto/certs/server.key
 
-require_certificate true
+require_certificate false
 use_identity_as_username false
