experiment 1 files updated

--- a/server/telegraf/TLS_telegraf.conf
+++ b/server/telegraf/TLS_telegraf.conf
@@ -7502,7 +7502,7 @@
 
 
 # # Gather metrics about network interfaces
-[[inputs.net]]
+# [[inputs.net]]
 #   ## By default, telegraf gathers stats from any up interface (excluding loopback)
 #   ## Setting interfaces will tell it to gather these explicit interfaces,
 #   ## regardless of status. When specifying an interface, glob-style
@@ -11924,9 +11924,9 @@
   data_format = "json"
   name_override = "temperature_reading"
 
-  tls_ca = "/etc/telegraf/certs/ca.crt"
-  tls_cert = "/etc/telegraf/certs/telegraf.crt"
-  tls_key = "/etc/telegraf/certs/telegraf.key"
+  tls_ca = "/etc/mosquitto/certs/ca.crt"
+  tls_cert = "/etc/mosquitto/certs/esp32client.crt"
+  tls_key = "/etc/mosquitto/certs/esp32client.key"
 #  insecure_skip_verify = false
 #   ## The message topic will be stored in a tag specified by this value.  If set
 #   ## to the empty string no topic tag will be created.
@@ -11976,8 +11976,8 @@
 #   # client_id = ""
 #
 #   ## Username and password to connect MQTT server.
-#      username = "esp32client"
-#      password = "password"
+      username = "esp32client"
+      password = "password"
 #
 #   ## Optional TLS Config
 #   # tls_ca = "/etc/telegraf/ca.pem"
