--- a/server/mosquitto/mTLS_mosquitto.conf
+++ b/server/mosquitto/mTLS_mosquitto.conf
@@ -8,11 +8,11 @@ log_dest file /var/log/mosquitto/mosquitto.log
 include_dir /etc/mosquitto/conf.d
 
 allow_anonymous false
-password_file /etc/mosquitto/passwd
+#password_file /etc/mosquitto/passwd
 
 cafile /etc/mosquitto/certs/ca.crt
 certfile /etc/mosquitto/certs/server.crt
 keyfile /etc/mosquitto/certs/server.key
 
 require_certificate true
-use_identity_as_username false
+use_identity_as_username true
