--- a/server/mosquitto/mosquitto.conf
+++ b/server/mosquitto/mosquitto.conf
@@ -1,4 +1,4 @@
-listener 1883
+listener 8883
 
 pid_file /run/mosquitto/mosquitto.pid
 persistence true
@@ -7,12 +7,12 @@ log_dest file /var/log/mosquitto/mosquitto.log
 
 include_dir /etc/mosquitto/conf.d
 
-#allow_anonymous false
-password_file /etc/mosquitto/passwd
+allow_anonymous false
+#password_file /etc/mosquitto/passwd
 
-#cafile /etc/mosquitto/certs/ca.crt
-#certfile /etc/mosquitto/certs/server.crt
-#keyfile /etc/mosquitto/certs/server.key
+cafile /etc/mosquitto/certs/ca.crt
+certfile /etc/mosquitto/certs/server.crt
+keyfile /etc/mosquitto/certs/server.key
 
-#require_certificate true
-#use_identity_as_username false
+require_certificate true
+use_identity_as_username true
